--- a/templates/application-response.html
+++ b/templates/application-response.html
@@ -1,10 +1,8 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Application Response</title>
-</head>
-<body>
-    <!-- fill this in -->
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Confirmation{% endblock %}
+
+{% block body %}
+    <h2>This is your submission confirmation.<h2><br>
+    <p>Thank you, {{ name }}, for applying to be a {{ job }}. Your
+minimum salary requirement is ${{ salary }}.</p>
+{% endblock %}
