--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
-<!doctype html>
-<html>
-<head>
-  <title>Sample Home Page</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Welcome!{% endblock %}
 
-<h1>This is the sample home page.</h1>
-
-</body>
-</html>
+{% block body %}
+    <h2>Welcome to the Ubermelon application!<h2><br>
+    <p><a href="/application-form">Next</a></p>
+{% endblock %}
